# mayer-multiple

./: .gitignore  Cargo.toml  README.md
data/: result_mayer_multiple.csv  run_and_update.sh
src/: main.rs
