[package]
name = "mayer_multiple"
version = "0.0.1"
authors = ["Ivan Acosta-Rubio <ivan@softwarecriollo.com>"]
description = "A package to know the multiple as a result of dividing Bitcoin's 200 day moving average by the current price"
license = "MIT"


[dependencies]
hyper = "~0.7"
chrono = "0.4"
time = "0.1.39"
serde_json = "1.0.11"
serde = "1.0"
